# die-drei-fragezeichen-scripts

./: .npmignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json  readme.md
.github/workflows/: publish.yaml
assets/audio/1/: 1.mp3.transcript.json  10.mp3.transcript.json  11.mp3.transcript.json  12.mp3.transcript.json  13.mp3.transcript.json  14.mp3.transcript.json  15.mp3.transcript.json  16.mp3.transcript.json  17.mp3.transcript.json  18.mp3.transcript.json  19.mp3.transcript.json  2.mp3.transcript.json  20.mp3.transcript.json  21.mp3.transcript.json  22.mp3.transcript.json  23.mp3.transcript.json  24.mp3.transcript.json  25.mp3.transcript.json  26.mp3.transcript.json  27.mp3.transcript.json  28.mp3.transcript.json  29.mp3.transcript.json  3.mp3.transcript.json  30.mp3.transcript.json  31.mp3.transcript.json  32.mp3.transcript.json  33.mp3.transcript.json  34.mp3.transcript.json  35.mp3.transcript.json  36.mp3.transcript.json  37.mp3.transcript.json  38.mp3.transcript.json  39.mp3.transcript.json  4.mp3.transcript.json  40.mp3.transcript.json  5.mp3.transcript.json  6.mp3.transcript.json  7.mp3.transcript.json  8.mp3.transcript.json  9.mp3.transcript.json
assets/audio/186/: 1.mp3.transcript.json  2.mp3.transcript.json  3.mp3.transcript.json  4.mp3.transcript.json  5.mp3.transcript.json  6.mp3.transcript.json  7.mp3.transcript.json  (+1 more)
src/: ScriptHandler.ts  index.ts  main.rs  processScript.ts  s3.rs
src/gemini/: files.rs  mod.rs  schema.rs
src/metadata/: mod.rs  schema.rs
src/tracks/: mod.rs  prompt.txt
src/transcript/: mod.rs  prompt.txt
(+9 files in other folders)
